# snib

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  snibconfig.toml
.github/workflows/: clean_deployments.yml  coverage.yml  docs.yml  python-package.yml  release.yml  staging.yml
development/changelog/: index.html
development/code_structure/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/development/: code_structure.md  contributing.md
docs/reference/: chunker.md  formatter.md  logger.md  models.md  pipeline.md  scanner.md  utils.md  writer.md
docs/usage/: cli.md  getting-started.md  presets.md
promptready/: prompt_1.txt  prompt_2.txt
reference/chunker/: index.html
reference/formatter/: index.html
reference/logger/: index.html
reference/models/: index.html
reference/pipeline/: index.html
reference/scanner/: index.html
reference/utils/: index.html
reference/writer/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
src/snib/: __init__.py  __main__.py  chunker.py  cli.py  config.py  constants.py  extensions.py  formatter.py  models.py  pipeline.py  scanner.py  tasks.py  utils.py  writer.py
tests/: test_chunker.py  test_cli_scan.py  test_formatter.py  test_scanner.py  test_utils.py  test_writer.py
usage/cli/: index.html
usage/configuration/: index.html
usage/filters/: index.html
usage/getting-started/: index.html
usage/presets/: index.html
usage/tasks/: index.html
(+19 files in other folders)
